[package]
name = "multi_owner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dag"
path = "src/dag.rs"

[[bin]]
name = "refcell"
path = "src/refcell.rs"

[[bin]]
name = "dag_mut"
path = "src/dag_mut.rs"

[[bin]]
name = "rc_demo"
path = "src/rc_demo.rs"

[[bin]]
name = "my_dag"
path = "src/my_dag.rs"

[[bin]]
name = "spawn_demo"
path = "src/spawn_demo.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
